--- a/suggested-apps-module/public/styles.css
+++ b/suggested-apps-module/public/styles.css
@@ -9,14 +9,14 @@
 }
 
 .header {
-  width: 330px;
+  width: 360px;
   margin-bottom: 15px;
   min-height: 30px;
   position: relative;
 }
 
 .similar {
-  font-family: "Roboto",sans-serif;
+  font-family: "Roboto", sans-serif;
   position: absolute;
   font-weight: 400;
   font-size: 20px;
@@ -29,7 +29,7 @@
 
 .btn-col {
   position: relative;
-  min-height: 30px
+  min-height: 30px;
 }
 
 .seemore-btn {
@@ -52,19 +52,20 @@
 
 .seemore-btn:hover {
   background-color: #8bc34a;
-  box-shadow: inset 0 -2px 0 rgba(0,0,0,0.27);
+  box-shadow: inset 0 -2px 0 rgba(0, 0, 0, 0.27);
   transition: 0.25s;
 }
 
 .appCards {
-  width: 330px
+  width: 360px;
 }
 
 .appCard {
   border-radius: 2px;
   background-color: white;
   margin-bottom: 10px;
-  box-shadow: 0 1px 1px 0 rgba(0,0,0,0.14), 0 2px 1px -1px rgba(0,0,0,0.12), 0 1px 3px 0 rgba(0,0,0,0.2);
+  box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14),
+    0 2px 1px -1px rgba(0, 0, 0, 0.12), 0 1px 3px 0 rgba(0, 0, 0, 0.2);
 }
 
 .appLogo {
@@ -75,11 +76,10 @@
   cursor: pointer;
 }
 
-
 .appLogo img {
   height: 165px;
   width: 165px;
-  padding: 18px
+  padding: 18px;
 }
 
 .appInfo {
@@ -93,7 +93,7 @@
 .appName {
   line-height: 24px;
   max-height: 24px;
-  font-family: "Roboto",sans-serif;
+  font-family: "Roboto", sans-serif;
   font-size: 20px;
   font-weight: 300;
   word-break: break-all;
@@ -109,7 +109,7 @@
   max-height: 17px;
   overflow: hidden;
   word-break: break-all;
-  font-family: "Roboto",sans-serif;
+  font-family: "Roboto", sans-serif;
   font-size: 13px;
   font-weight: 300;
 }
@@ -126,8 +126,8 @@
   /* word-break: break-word; */
   font-weight: 300;
   max-height: 54px;
-  overflow-x:hidden;
-  overflow-y:hidden;
+  overflow-x: hidden;
+  overflow-y: hidden;
   word-break: break-word;
 }
 
@@ -138,5 +138,5 @@
 .rating {
   position: absolute;
   bottom: 0;
-  margin-bottom: 5px
+  margin-bottom: 5px;
 }
